2006-07-17  Toon Moene  <toon@moene.indiv.nluug.nl>

	* invoke.texi: Remove mention of f77; Reformat table for
	inline parameter options correctly; mention that -malign-double
	is default on x86-64 targets.

2006-07-17  Zdenek Dvorak <dvorakz@suse.cz>

	* tree-chrec.c (avoid_arithmetics_in_type_p): New.
	(convert_affine_scev, chrec_convert_aggressive): Use
	avoid_arithmetics_in_type_p.  Do not check for the subtypes
	separately.

2006-07-17  Richard Sandiford  <richard@codesourcery.com>

	PR middle-end/28403
	* optabs.c (expand_doubleword_shift): Wrap the call to
	do_compare_rtx_and_jump with NO_DEFER_POP and OK_DEFER_POP.

2006-07-17  Richard Sandiford  <richard@codesourcery.com>

	PR middle-end/28402
	* optabs.c (expand_binop): Pass next_methods rather than methods
	to expand_doubleword_shift.

2006-07-17  J"orn Rennecke  <joern.rennecke@st.com>

	PR other/28251
	* tree.h (dump_addr): Declare.
	* print-tree.c (dump_addr): New function.
	(print_node_brief, print_node): Use it.
	* print-rtl.c (print_rtx): Likewise.
	* common.opt (-fdump-noaddr): New option.
	* doc/invoke.texi (-fdump-noaddr): Document.
	* loop-unroll.c (si_info_hash): Make hash independent of addresses.
	(ve_info_hash): Likewise.

2006-07-13  Andrew Haley  <aph@redhat.com>

	PR tree-optimization/19505
	* tree-cfgcleanup.c (tree_forwarder_block_p): If we have an EH
	edge leaving this block, make sure that the destination of this
	block has only one predecessor.

2006-07-17  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/28238
	* tree-inline.c (copy_bb): Check if we produced valid
	gimple copying and substituting a stmt.  If not, gimplify
	it.

2006-07-16  Eric Botcazou  <ebotcazou@adacore.com>

	* optabs.c (maybe_encapsulate_block): New function extracted from...
	(emit_libcall_block): ...here.  Invoke it on the block of insns to
	maybe emit REG_LIBCALL/REG_RETVAL notes around the block.
	(emit_no_conflict_block): Likewise.

2006-07-16  Eric Botcazou  <ebotcazou@libertysurf.fr>
